Wed Sep  7 06:59:35 UTC 2006  Yan Dai  <dai_y@ociweb.com>

      The main changes are: (See RT8999)
        - Made the DCPS entity servants deleted upon delete_*()
          call instead of upon orb shutdown. This would make the create/delete
          DCPS entity multiple times in a single process without shutdown 
          Service Participant. 
        - Added keep_link configuration to indicate whether a datalink should
          be maintained when all associations are removed. This would allow 
          the datareader/datawriter reconnect repeatedly using the same
          connection.
        
      * dds/DCPS/WriteDataContainer.cpp:
      * dds/DCPS/transport/framework/DataLinkSet.cpp:

        Added logging for cached allocator information.
        
      * dds/DCPS/DomainParticipantFactoryImpl.cpp:
      * dds/DCPS/transport/framework/TransportImpl.cpp:

        Added guard to protect unregistration of subscription.
        
      * dds/DCPS/transport/simpleTCP/SimpleTcpDataLink.cpp:
      
        Made send_graceful_disconnect_message() call notify the
        send strategy terminate send except the graceful disconnect
        message.
        
      * dds/DCPS/transport/framework/DataLink.h:
      * dds/DCPS/transport/framework/DataLink.cpp:
      * dds/DCPS/transport/framework/DataLink.inl:

        Made the release_reservations() not release datalink when 
        all associations are removed if keep_link is configured to be on.
        Made the remove_sample() and remove_all_control_msgs_i() handled
        by ThreadPerConnectionSendTask when thread_per_connection is
        enabled. This makes the send() and remove_sample() be handled 
        sequentially.

      * dds/DCPS/transport/framework/TransportConfiguration.h:
      * dds/DCPS/transport/framework/TransportConfiguration.cpp:
      * dds/DCPS/transport/framework/TransportConfiguration.inl:

        Added a new configuration - "keep_link", which indicates if the 